--- a/Slot_Machine.ipynb
+++ b/Slot_Machine.ipynb
@@ -85,19 +85,19 @@
     "    clock = pygame.time.Clock()\n",
     "\n",
     "    images = {}\n",
-    "    images[\"cherry\"] = pygame.image.load(\"cherry.jpg\")\n",
+    "    images[\"cherry\"] = pygame.image.load(\"cherry.jpeg\")\n",
     "    images[\"cherry\"] = pygame.transform.scale(images[\"cherry\"], (REEL_SIZE - 10, REEL_SIZE - 10))\n",
     "\n",
     "    images[\"lemon\"] = pygame.image.load(\"lemon.png\")\n",
     "    images[\"lemon\"] = pygame.transform.scale(images[\"lemon\"], (REEL_SIZE - 10, REEL_SIZE - 10))\n",
     "\n",
-    "    images[\"bell\"] = pygame.image.load(\"bell.jpg\")\n",
+    "    images[\"bell\"] = pygame.image.load(\"bell.jpeg\")\n",
     "    images[\"bell\"] = pygame.transform.scale(images[\"bell\"], (REEL_SIZE - 10, REEL_SIZE - 10))\n",
     "\n",
     "    images[\"star\"] = pygame.image.load(\"star.png\")\n",
     "    images[\"star\"] = pygame.transform.scale(images[\"star\"], (REEL_SIZE - 10, REEL_SIZE - 10))\n",
     "\n",
-    "    images[\"seven\"] = pygame.image.load(\"seven.jpg\")\n",
+    "    images[\"seven\"] = pygame.image.load(\"seven.jpeg\")\n",
     "    images[\"seven\"] = pygame.transform.scale(images[\"seven\"], (REEL_SIZE - 10, REEL_SIZE - 10))\n",
     "\n",
     "    font_big = pygame.font.SysFont(\"arial\", 60, bold=True)\n",
